--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="flex flex-col">
                     <span class="text-[9px] tracking-widest text-brand-light uppercase font-semibold">WhatsApp / Pedidos</span>
-                    <span class="text-[13px] font-semibold text-brand-dark">+57 315 379 0292</span>
+                    <span class="text-[13px] font-semibold text-brand-dark">Haz tu pedido aquí</span>
                 </div>
             </a>
 
@@ -123,13 +123,13 @@
             </a>
 
             <!-- Botón de Tienda/Catálogo -->
-            <a href="#" target="_blank" class="flex items-center p-3 bg-white/50 backdrop-blur-md rounded-[14px] gap-3 hover:bg-white/80 transition-colors group border border-white/50 shadow-sm">
+            <a href="https://dulceterciopelo.github.io/provisional/" target="_blank" class="flex items-center p-3 bg-white/50 backdrop-blur-md rounded-[14px] gap-3 hover:bg-white/80 transition-colors group border border-white/50 shadow-sm">
                 <div class="w-10 h-10 rounded-full bg-white shadow-sm flex items-center justify-center text-brand-main group-hover:scale-110 transition-transform">
                     <i class="ph-fill ph-storefront text-xl"></i>
                 </div>
                 <div class="flex flex-col">
                     <span class="text-[9px] tracking-widest text-brand-light uppercase font-semibold">Catálogo en Línea</span>
-                    <span class="text-[13px] font-semibold text-brand-dark">dulceterciopelo.com</span>
+                    <span class="text-[13px] font-semibold text-brand-dark">dulceterciopelo.github.io</span>
                 </div>
             </a>
 
@@ -157,7 +157,7 @@
                 <a href="https://www.instagram.com/reposteria_dulcetercipelo?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="btn-hover gradient-ig text-white py-2.5 rounded-[12px] flex items-center justify-center gap-1.5 font-medium text-[13px] shadow-md shadow-pink-500/30">
                     <i class="ph-fill ph-instagram-logo text-base"></i> IG
                 </a>
-                <a href="#" class="btn-hover bg-brand-main text-white py-2.5 rounded-[12px] flex items-center justify-center gap-1.5 font-medium text-[13px] shadow-md shadow-brand-main/30">
+                <a href="https://dulceterciopelo.github.io/provisional/" target="_blank" class="btn-hover bg-brand-main text-white py-2.5 rounded-[12px] flex items-center justify-center gap-1.5 font-medium text-[13px] shadow-md shadow-brand-main/30">
                     <i class="ph-fill ph-globe text-base"></i> Web
                 </a>
             </div>
@@ -189,7 +189,7 @@
             
             <!-- Generador automático de QR -->
             <div class="bg-brand-bg p-3 rounded-[14px] inline-block border border-brand-card">
-                <img src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=https://dulceterciopelo.com&color=8A2742&bgcolor=FDF8F9" alt="Código QR Dulce Terciopelo" class="w-full h-auto rounded-md">
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=https://dulceterciopelo.github.io/provisional/&color=8A2742&bgcolor=FDF8F9" alt="Código QR Dulce Terciopelo" class="w-full h-auto rounded-md">
             </div>
             
             <div class="mt-4 flex items-center justify-center gap-1.5 text-brand-main font-medium text-xs">
