--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </a>
 
             <!-- Botón de Tienda/Catálogo -->
-            <a href="https://dulceterciopelo.github.io/provisional/" target="_blank" class="flex items-center p-3 bg-white/50 backdrop-blur-md rounded-[14px] gap-3 hover:bg-white/80 transition-colors group border border-white/50 shadow-sm">
+            <a href="https://dulceterciopelo.github.io/Dulceterciopelo/" target="_blank" class="flex items-center p-3 bg-white/50 backdrop-blur-md rounded-[14px] gap-3 hover:bg-white/80 transition-colors group border border-white/50 shadow-sm">
                 <div class="w-10 h-10 rounded-full bg-white shadow-sm flex items-center justify-center text-brand-main group-hover:scale-110 transition-transform">
                     <i class="ph-fill ph-storefront text-xl"></i>
                 </div>
@@ -233,3 +233,4 @@
     </script>
 </body>
 </html>
+
