--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <a href="https://www.instagram.com/reposteria_dulcetercipelo?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="btn-hover gradient-ig text-white py-2.5 rounded-[12px] flex items-center justify-center gap-1.5 font-medium text-[13px] shadow-md shadow-pink-500/30">
                     <i class="ph-fill ph-instagram-logo text-base"></i> IG
                 </a>
-                <a href="https://dulceterciopelo.github.io/provisional/" target="_blank" class="btn-hover bg-brand-main text-white py-2.5 rounded-[12px] flex items-center justify-center gap-1.5 font-medium text-[13px] shadow-md shadow-brand-main/30">
+                <a href="https://dulceterciopelo.github.io/Dulceterciopelo/" target="_blank" class="btn-hover bg-brand-main text-white py-2.5 rounded-[12px] flex items-center justify-center gap-1.5 font-medium text-[13px] shadow-md shadow-brand-main/30">
                     <i class="ph-fill ph-globe text-base"></i> Web
                 </a>
             </div>
@@ -233,4 +233,5 @@
     </script>
 </body>
 </html>
+
 
